# compute-cloth

./: CMakeLists.txt  README  README.md  makefile
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: cloth.fs  cloth.gs  cloth.vs  cloth_compute.glsl  compute_apply_accel.glsl  compute_collisions.glsl  compute_common.glsl  compute_constraints.glsl  compute_forces.glsl  compute_sphere_verlet.glsl  compute_verlet.glsl  skybox.fs  sphere.fs  sphere.vs
src/: game.cpp  game.h  main.cpp  util.h
src/gfx/: program.h
